2010-05-28  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase version from 1.2.0beta1 to 1.2.0beta2

2010-05-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.5 to 1.1.6

2010-05-27  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up to bug #14486: Sprite icons not shown in Safari and IE6 (thanks to Steffen Ritter)
	* Follow-up to bug #14486: Fix transparency on frontend and backend user icons (thanks to Steffen Gebert and Steffen Ritter)

2010-05-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14496: SQL parser does not handle ALTER TABLE with character set operation
	* Follow-up of bug #13670: forgotten reset/each statement caused side effect of using foreach statement
	* Fixed bug #14456: SQL parser doesn't accept ALTER TABLE statement without CHANGE, DROP or ADD keyword
	* Fixed bug #13934: Side-effect of substr in t3lib_cs (thanks to Rens Admiraal)

2010-05-27  Jochen Rau <jochen.rau@typoplanet.de>

	* Fixed bug #13604: PHP Warning from t3lib_loadmodules after installing extbase, because $TBE_MODULES['_dispatcher'] is not unset (thanks to Marc Bastian Heinrichs)

2010-05-27  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #14388: TypoScript templates containing a "$1" become corrupted

2010-05-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14489: htmlArea RTE: color dialogues do not show all configured colors
	* Fixed bug #14491: htmlArea RTE: disableColorPicker not always honoured
	* Fixed bug #14494: htmlArea RTE: backpath is not correctly set
	* Follow-up to issue #14494: htmlArea RTE: backpath is not correctly set
	* Further follow-up to issue #14494: htmlArea RTE: backpath is not correctly set

2010-05-27  Oliver Hader  <oliver@typo3.org>

	* Follow-up to #14465: Missing argument when rendering language preview in page module

2010-05-26  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14486: Added missing icons for the new iconset (thanks to Steffen Ritter)